--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,20 @@
     },
     "extends": "eslint:recommended",
     "overrides": [
+        {
+            "files": ["**/*.test.js"],
+            "env": { "jest": true },
+            "plugins": ["jest"],
+            "extends": ["plugin:jest/recommended"],
+            "rules": { "jest/prefer-expect-assertions": "off" }
+          }
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "ignorePatterns": ["*.config.js"],
     "rules": {
     }
+
 }
