--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
     "prepare": "husky install",
-    "test": "npm run test-unit",
-    "test-unit": "jest"
+    "test": "npm run test-unit && npm run test-e2e-cli",
+    "test-unit": "jest",
+    "test-e2e": "cypress open",
+    "test-e2e-cli": "cypress run"
+  },
+  "jest": {
+    "resetMocks": false,
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "Noroff",
@@ -18,17 +30,23 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "cypress": "^13.5.1",
     "eslint": "^8.53.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jest": "^27.6.0",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
+    "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^15.1.0",
     "live-server": "^1.2.2",
     "prettier": "^3.1.0",
     "sass": "^1.54.8"
   },
   "dependencies": {
-    "bootstrap-dark-5": "^1.1.3"
+    "bootstrap-dark-5": "^1.1.3",
+    "fetch": "^1.1.0",
+    "node": "^21.1.0",
+    "node-fetch": "^2.7.0"
   },
   "lint-staged": {
     "src/**/*.js": [
